<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_logo"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.AppLogin">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/sing_in_fragment_padding_66dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_20dp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/new_egida_file" />


        <TextView
            android:id="@+id/title_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/sing_in_fragment_login_in"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_22sp"
            app:layout_constraintBottom_toTopOf="@id/sing_in_fragment_input_user_email"
            app:layout_constraintTop_toBottomOf="@id/logo"
            tools:layout_editor_absoluteX="24dp" />

        <EditText
            android:id="@+id/sing_in_fragment_input_user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:background="@drawable/circular_border_solid_top"
            android:baselineAligned="false"
            android:fontFamily="@font/montserrat"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_18dp"
            android:textSize="@dimen/sing_in_fragment_text_size_14sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/title_logo" />


        <EditText
            android:id="@+id/sing_in_fragment_input_user_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/circular_border_solid_bottom"
            android:fontFamily="@font/montserrat"
            android:hint="@string/sing_in_fragment_hint_your_password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_18dp"
            android:textSize="@dimen/sing_in_fragment_text_size_14sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/sing_in_fragment_input_user_email" />


        <TextView
            android:id="@+id/sing_in_fragment_btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/margin_20dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat"
            android:text="@string/sing_in_fragment_forgot_password"
            android:textColor="@color/button_sing_in_fragment"
            android:textSize="@dimen/sing_in_fragment_text_size_14sp"
            app:layout_constraintBottom_toBottomOf="@id/sing_in_fragment_input_user_password"
            app:layout_constraintEnd_toEndOf="@id/sing_in_fragment_input_user_password"
            app:layout_constraintTop_toTopOf="@id/sing_in_fragment_input_user_password" />


        <Button
            android:id="@+id/sing_in_fragment_btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/sing_in_fragment_padding_14dp"
            android:background="@drawable/circular_blue_border_solid"
            android:fontFamily="@font/montserrat"
            android:padding="@dimen/sing_in_fragment_padding_16dp"
            android:text="@string/sing_in_fragment_continue"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/sing_in_fragment_input_user_password" />


        <TextView
            android:id="@+id/text_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sing_in_fragment_margin_24dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:padding="@dimen/sing_in_fragment_padding_10dp"
            android:text="@string/sing_in_fragment_no_account_yet"
            android:textColor="@color/sing_in_fragment_btn_sing_up"
            android:textSize="@dimen/sing_in_fragment_text_size_16sp"
            app:layout_constraintEnd_toStartOf="@id/btn_create_one"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sing_in_fragment_btn_login" />

        <TextView
            android:id="@+id/btn_create_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sing_in_fragment_margin_24dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:padding="@dimen/sing_in_fragment_padding_10dp"
            android:text="@string/sing_in_fragment_create_one"
            android:textColor="@color/white"
            android:textSize="@dimen/sing_in_fragment_text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_account"
            app:layout_constraintTop_toBottomOf="@id/sing_in_fragment_btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>