<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/work_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarSetting"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            app:navigationIcon="@drawable/baseline_arrow_back_white_24dp"
            app:navigationIconTint="@color/white"
            app:title="@string/work"
            app:titleMarginStart="130dp"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="85"
            android:text="@string/work_hour"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="2"
            android:background="@drawable/remove_circle_grey_700_36dp" />

        <TextView
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="11"
            android:gravity="center"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:background="@drawable/baseline_add_circle_grey_700_36dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="85"
            android:text="@string/leisure_hour"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="2"
            android:background="@drawable/remove_circle_grey_700_36dp" />

        <TextView
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="11"
            android:gravity="center"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:background="@drawable/baseline_add_circle_grey_700_36dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>